Add artifact verification
